--- a/css/styles.css
+++ b/css/styles.css
@@ -11014,10 +11014,10 @@ footer.footer .social-link:hover {
   height: 100%;
   padding-top: 8rem;
   padding-bottom: 8rem;
-  background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("../assets/img/textured-blackboard-with-chalks-eraser.jpg");
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: center center;
+  background: url("../assets/img/MastheadBG.png");
+  background-position: center;
+  background-repeat: repeat;
+  background-size: 100%;
 }
 .masthead h1, .masthead .h1 {
   font-size: 4rem;
